--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         }
     ],
     "require": {
-	"psr/log": "~1.0.2"
+	   "psr/log": "1.0.2"
     },
      "autoload": {
         "psr-0": {"NTLMSoap": "src/"}
