Fix - Name composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "fernando/ntlmsoap",
+    "name": "fernandomaia97/ntlmsoap",
     "description": "Provides a NTLM Soap implementation",
     "authors": [
         {
